--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
         </p>
 
         <div class="about__contact center">
-          <a href="assets/Narender_Singh_DotNet_Resume.pdf" target="_blank">
+          <a
+            href="https://drive.google.com/uc?export=download&id=1BPIdo6-hQDr1oqx6C4wlzHU-NDjrNFEI"
+            target="_blank"
+          >
             <span class="btn btn--outline">Download Resume</span>
           </a>
 
@@ -151,7 +154,7 @@
               client communication.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">ASP.NET MVC</li>
+              <li class="project__stack-item">ASP.NET Core MVC</li>
               <li class="project__stack-item">C#</li>
               <li class="project__stack-item">SQL Server</li>
               <li class="project__stack-item">jQuery</li>
@@ -160,8 +163,71 @@
         </div>
       </section>
 
+      <!-- ================= EXPERIENCE ================= -->
+      <section class="section experience" id="experience">
+        <h2 class="section__title">Experience</h2>
+
+        <div class="experience__item">
+          <h3>.NET Developer</h3>
+          <p class="experience__company">
+            CS Soft Solutions Pvt. Ltd., Mohali
+            <span class="experience__duration">(Mar 2023 – Present)</span>
+          </p>
+
+          <ul class="experience__details">
+            <li>
+              Designed and developed scalable web applications using
+              <strong>ASP.NET Core, MVC, Web APIs, and SQL Server</strong>.
+            </li>
+            <li>
+              Implemented <strong>SignalR</strong> for real-time notifications
+              and live updates.
+            </li>
+            <li>
+              Optimized SQL queries and stored procedures, improving performance
+              by <strong>~20%</strong>.
+            </li>
+            <li>
+              Migrated legacy <strong>.NET Framework</strong> applications to
+              <strong>.NET 6</strong> using Clean Architecture.
+            </li>
+            <li>
+              Worked closely with Angular developers to integrate REST APIs.
+            </li>
+            <li>
+              Followed <strong>Agile/Scrum</strong> practices with Azure DevOps,
+              sprint planning, and code reviews.
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- ================= ACHIEVEMENTS ================= -->
+      <section class="section achievements">
+        <h2 class="section__title">Key Achievements</h2>
+
+        <ul class="achievements__list">
+          <li>
+            🚀 Improved application performance by optimizing SQL queries &
+            indexing
+          </li>
+          <li>
+            🔄 Successfully migrated legacy systems to modern .NET 6
+            architecture
+          </li>
+          <li>⚡ Implemented real-time features using SignalR</li>
+          <li>
+            🧩 Applied SOLID & DDD principles in production-level projects
+          </li>
+          <li>
+            🤝 Collaborated directly with clients to gather and refine
+            requirements
+          </li>
+        </ul>
+      </section>
+
       <!-- ================= SKILLS ================= -->
-      <section class="section skills" id="skills">
+      <!-- <section class="section skills" id="skills">
         <h2 class="section__title">Skills</h2>
 
         <ul class="skills__list">
@@ -180,6 +246,75 @@
           <li class="skills__list-item btn btn--plain">Git & GitHub</li>
           <li class="skills__list-item btn btn--plain">Azure DevOps</li>
         </ul>
+      </section> -->
+
+      <!-- ================= SKILLS (DETAILED) ================= -->
+      <section class="section skills" id="skills">
+        <h2 class="section__title">Technical Skills</h2>
+
+        <h4>Backend</h4>
+        <ul class="skills__list">
+          <li class="skills__list-item btn btn--plain">C#</li>
+          <li class="skills__list-item btn btn--plain">ASP.NET Core</li>
+          <li class="skills__list-item btn btn--plain">Web API</li>
+          <li class="skills__list-item btn btn--plain">Entity Framework</li>
+          <li class="skills__list-item btn btn--plain">ADO.NET</li>
+          <li class="skills__list-item btn btn--plain">SignalR</li>
+        </ul>
+
+        <h4>Frontend</h4>
+        <ul class="skills__list">
+          <li class="skills__list-item btn btn--plain">Angular</li>
+          <li class="skills__list-item btn btn--plain">JavaScript (ES6+)</li>
+          <li class="skills__list-item btn btn--plain">HTML5</li>
+          <li class="skills__list-item btn btn--plain">CSS3</li>
+          <li class="skills__list-item btn btn--plain">Bootstrap</li>
+          <li class="skills__list-item btn btn--plain">Tailwind</li>
+        </ul>
+
+        <h4>Database & Tools</h4>
+        <ul class="skills__list">
+          <li class="skills__list-item btn btn--plain">SQL Server</li>
+          <li class="skills__list-item btn btn--plain">PostgreSQL</li>
+          <li class="skills__list-item btn btn--plain">MySQL</li>
+          <li class="skills__list-item btn btn--plain">Git & GitHub</li>
+          <li class="skills__list-item btn btn--plain">Azure DevOps</li>
+          <li class="skills__list-item btn btn--plain">Postman</li>
+        </ul>
+      </section>
+
+      <!-- ================= ARCHITECTURE ================= -->
+      <section class="section architecture">
+        <h2 class="section__title">Architecture & Practices</h2>
+
+        <ul class="skills__list">
+          <li class="skills__list-item btn btn--plain">Clean Architecture</li>
+          <li class="skills__list-item btn btn--plain">
+            Domain-Driven Design (DDD)
+          </li>
+          <li class="skills__list-item btn btn--plain">SOLID Principles</li>
+          <li class="skills__list-item btn btn--plain">RESTful APIs</li>
+          <li class="skills__list-item btn btn--plain">JWT Authentication</li>
+          <li class="skills__list-item btn btn--plain">
+            Role-Based Authorization
+          </li>
+          <li class="skills__list-item btn btn--plain">Unit Testing (NUnit)</li>
+        </ul>
+      </section>
+
+      <!-- ================= EDUCATION ================= -->
+      <section class="section education">
+        <h2 class="section__title">Education & Training</h2>
+
+        <div class="education__item">
+          <h3>Bachelor of Computer Applications (BCA)</h3>
+          <p>Himachal Pradesh University, Shimla (2016 – 2019)</p>
+        </div>
+
+        <div class="education__item">
+          <h3>Industrial Training (6 Months)</h3>
+          <p>CS Infotech, Chandigarh (2022 – 2023)</p>
+        </div>
       </section>
 
       <!-- ================= CONTACT ================= -->
