--- a/index.html
+++ b/index.html
@@ -401,6 +401,28 @@
         </div>
       </section>
 
+      <!-- ================= SKILLS ================= -->
+      <!-- <section class="section skills" id="skills">
+        <h2 class="section__title">Skills</h2>
+
+        <ul class="skills__list">
+          <li class="skills__list-item btn btn--plain">C#</li>
+          <li class="skills__list-item btn btn--plain">ASP.NET Core</li>
+          <li class="skills__list-item btn btn--plain">ASP.NET MVC</li>
+          <li class="skills__list-item btn btn--plain">Web API</li>
+          <li class="skills__list-item btn btn--plain">Entity Framework</li>
+          <li class="skills__list-item btn btn--plain">LINQ</li>
+          <li class="skills__list-item btn btn--plain">SQL Server</li>
+          <li class="skills__list-item btn btn--plain">PostgreSQL</li>
+          <li class="skills__list-item btn btn--plain">Angular</li>
+          <li class="skills__list-item btn btn--plain">JavaScript</li>
+          <li class="skills__list-item btn btn--plain">JWT Authentication</li>
+          <li class="skills__list-item btn btn--plain">SignalR</li>
+          <li class="skills__list-item btn btn--plain">Git & GitHub</li>
+          <li class="skills__list-item btn btn--plain">Azure DevOps</li>
+        </ul>
+      </section> -->
+
       <!-- ================= SKILLS (DETAILED) ================= -->
       <section class="section skills" id="skills">
         <h2 class="section__title">Technical Skills</h2>
